2021-01-05: 2.0.0 (79605c5)
- Initial version

2021-01-05: 2.0.1 (b0692c4)
- Make sure 2700ohm and 880ohm calibration is not overwritten
- Add error state to API

2021-02-08: 2.0.2 (1d667a6)
- Make sure start_charging does nothing if autostart is disabled
  and no car is connected 

2021-02-15: 2.0.3 (54f13b1)
- Allow connected car during initial calibration
  (we just need to make sure to not activate the contactor)

2021-02-16: 2.0.4 (7f0db8f)
- Make sure initial value for contactor check is correct

2021-03-08: 2.0.5 (ebb169d)
- Add Charge Release to GetState function

2021-05-10: 2.0.6 (db729ae)
- Add support for managed mode
- Add support for hardware version 1.5
- Remove lock switch support

2021-06-08: 2.0.7 (baa61c9)
- Add user calibration support
- Add special handling for ID.3

2021-07-06: 2.0.8 (3250325)
- Remove unused low-level-mode
- Fix erroneous initialization of cp_duty_cycle
- Use the correct magic number for managed configuration

2021-07-06: 2.0.9 (1a9dece)
- Ignore glitches in contactor check

2021-07-16: 2.0.10 (63808f5)
- Add hardware version to get_low_level_state

2021-10-11. 2.0.11 (ce6d2ed)
- Add set_indicator_led API (compatible to EVSE V2)
- Add 500ms delay between state change from B to A in ID.3 mode

2021-10-27: 2.0.12 (9a7bb80)
- Add ChargeTime parameter to low level state getter
- Add GetButtonState API
- Add GetAllDataX API (for internal use in WARP Charger)

2022-03-30: 2.1.0 (8524e38)
- Add support for charging slots and corresponding API

2022-05-02: 2.1.1 (4c219b8)
- Add FactoryReset-function

2022-05-06: 2.1.2 (3b72e77)
- Improve button/key stop logic

2022-06-07: 2.1.3 (66b31ec)
- Make sure to never start charging when key switch is turned off
- Increase ID.3 mode wait time hysteresis time from 500ms to 2500ms
- Make sure LED turns on until standby for every state change

2022-XX-XX: 2.1.4 (TBD)
- Make sure charging starts again when autostart is active and stop button was pressed while car was not charging